--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <h1 id="bot-score">0</h1>
         </div>
         <div id="result-div">
-          <h1 id="result">You Win!!</h1>
+          <h1 id="result"></h1>
         </div>
         <div class="score">
           <h2>SCORE</h2>
