Display detailed result after each round

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
           />
         </div>
         <div id="round-winner">
-          <h3>paper beats rock</h3>
+          <h3>Paper beats Rock</h3>
           <h2>You lost this round</h2>
+          <h3>Make another move</h3>
         </div>
         <div id="show-user-move" class="show-move">
           <img
